--- a/package.json
+++ b/package.json
@@ -1,36 +1,26 @@
 {
-  "name": "biochemtranslator",
-  "version": "1.0.0",
-  "description": "A tool used for transcribing DNA and RNA and finding complementary strands",
+  "name": "node-js-getting-started",
+  "version": "0.1.5",
+  "description": "A sample Node.js app using Express 4",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "ejs": "2.3.3",
+    "express": "4.13.3"
+  },
+  "engines": {
+    "node": "0.12.7"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DeveloperTommy/BiochemTranslator.git"
+    "url": "https://github.com/heroku/node-js-getting-started"
   },
   "keywords": [
-    "biochemistry",
-    "bio",
-    "chem",
-    "developer",
-    "tommy",
-    "nguyen",
-    "translator",
-    "dna",
-    "rna"
+    "node",
+    "heroku",
+    "express"
   ],
-  "author": "Tommy Nguyen",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DeveloperTommy/BiochemTranslator/issues"
-  },
-  "homepage": "https://github.com/DeveloperTommy/BiochemTranslator#readme",
-  "dependencies": {
-    "ejs": "^2.3.4",
-    "express": "^4.13.3",
-    "html": "0.0.10",
-    "path": "^0.12.7"
-  }
+  "license": "MIT"
 }
