--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Node.js Getting Started",
-  "description": "A barebones Node.js app using Express 4",
-  "repository": "https://github.com/heroku/node-js-getting-started",
-  "logo": "http://node-js-sample.herokuapp.com/node.svg",
-  "keywords": ["node", "express", "static"],
-  "image": "heroku/nodejs"
+  "name": "Biochem Translator",
+  "description": "Translator made by Tommy Nguyen for Biochem 100",
+  "repository": "https://github.com/DeveloperTommy/BiochemTranslator",
+  "logo": "",
+  "keywords": ["node", "express", "static", "biochemistry", "rna", "dna"],
+  "image": ""
 }
