name is still invalid

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "biochem translator",
+  "name": "biochem_translator",
   "description": "Translator made by Tommy Nguyen for Biochem 100",
   "repository": "https://github.com/DeveloperTommy/BiochemTranslator",
   "logo": "",
